Fixed bug where modal is displayed behind the map

--- a/media/style/custom.css
+++ b/media/style/custom.css
@@ -85,6 +85,7 @@ table .button {
 .navletmap {
     height: 400px;
     width: auto;
+    position:relative;
 }
 
 .bigmap {
